<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dr Care</string>
    <string name="btn_google">Google</string>
    <string name="btn_facebook">Facebook</string>
    <string name="et_email_or_phone_number">Email or Phone number</string>
    <string name="et_password">Password</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="tv_new_user">New User</string>
    <string name="tv_swipe_up">Swipe up</string>
    <string name="web_client_id">600804880753-it5ablq8qtvsg298q43rmlk4fnf0ed8l.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1216785512065783</string>
    <string name="fb_login_protocol_scheme">fb1216785512065783</string>
    <string name="txt_swipe_up">Swipe up</string>
    <string name="txt_new_user">New User</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="hint_password">Password</string>
    <string name="hint_email_or_phone_number">Email or Phone number</string>
    <string name="txt_already">Already</string>
    <string name="txt_member">Member?</string>
    <string name="txt_swipe_down">Swipe down</string>
    <string name="txt_create">Create</string>
    <string name="txt_account">Account</string>
    <string name="txt_forgot_password2">Forgot Password</string>
    <string name="txt_enter_your_registered_account_below_to_receive_n_password_for_your_account">Enter your registered account below to receive\n password for your account</string>
    <string name="btn_send">Send</string>
    <string name="txt_create_new_password">Create New Password</string>
    <string name="txt_you_new_password_must_be_different_from_n_previously_used_password">You new password must be different from \n previously used password</string>
    <string name="et_new_password">New Password</string>
    <string name="et_confirm_password">Confirm Password</string>
    <string name="btn_create">Create</string>
    <string name="txt_entry_your_6_digit_code">Enter your 6 digit code</string>
    <string name="txt_please_resend">Please resend</string>
    <string name="txt_username">Username</string>
    <string name="btn_sign_out">sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="no_reminders">Click on the plus button below to begin creating your reminders!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_ccomment">CCommentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="today">Today</string>
    <string name="date">Date</string>
    <string name="_8_00_pm">8:00 pm</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="personal_reminder">Personal Reminder</string>
    <string name="repeat">Repeat</string>
    <string name="every_1_hour_s">Every 1 Hour(s)</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="_1">1</string>
    <string name="repetition_interval">Repetition Interval</string>
    <string name="hour">Hour</string>
    <string name="save">save</string>
    <string name="it_s_time">It’s time</string>
    <string name="_7_21_pm_oct_19">7:21 pm, Oct 19</string>
    <string name="done">Done</string>
    <string name="view">View</string>
    <string name="snooze">Snooze</string>
    <string name="click_on_the_plus_button_below_to_begin_creating_your_reminders">Click on the plus button below to begin creating your reminders!</string>
    <string name="hey_hossam">Hey, Hossam!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username" tools:ignore="DuplicateDefinition">Username</string>
    <string name="email_address">Email Address</string>
    <string name="home">Home</string>
    <string name="school">School</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="update">Update</string>
    <string name="location">Location</string>
    <string name="text">text</string>
    <string name="aa">Aa</string>
    <string name="dr_care_maps">Dr_care Maps</string>
    <string name="updata_password">Updata Password</string>
    <string name="user_account">User Account</string>
    <string name="type_of_repetitions">Type of Repetitions</string>
    <string name="password_reset">Password Reset</string>
    <string name="you_have_requested_a_password_reset_to_get_a_new_password_please_check_your_dr_care_email_inbox_and_enter_the_password_reset_code_we_sent_to">You have requested a password reset, to get a new password please check your Dr_Care email inbox and enter the password reset code we sent to:</string>
    <string name="email_local_domain_com">email : local@domain.com</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="create_post">Create Post</string>
    <string name="cairo">cairo</string>
    <string name="tap_to_see_quick_actions">Tap to see quick actions</string>
    <string name="aubergine">Aubergine</string>
    <string name="satellite">Satellite</string>
    <string name="default2">default</string>
    <string name="map_type">Map Type</string>
    <string name="light">Light</string>
    <string name="_2h">2h</string>
    <string name="reply">Reply</string>
    <string name="like">Like</string>
    <string name="chatting">Chatting</string>
    <string name="dashboard">Dashboard</string>
    <string name="what_s_on_your_mind">What’s on your mind?</string>
    <string name="el_hussein_university_hospital">El Hussein University Hospital</string>
    <string name="place">القليوبية</string>
    <string name="_2_min">2 min</string>
    <string name="_4_min">4 min</string>
    <string name="_1_1_2000">1/1/2000</string>
    <string name="text_messages_are_used_for_personal_family_business_and_social_purposes_governmental_and_non_governmental_organizations_use_text_messaging_for_communication_between_colleagues_in_the_2010s_the_sending_of_short_informal_messages_became_an_accepted_part_of_many_cultures_as_happened_earlier_with_emailing">Text messages are used for personal, family, business and social purposes. Governmental and non-governmental organizations use text messaging for communication between colleagues. In the 2010s, the sending of short informal messages became an accepted part of many cultures, as happened earlier with emailing</string>
    <string name="_0_m_s">0 m/s</string>
    <string name="_2_km">2 km</string>
    <string name="_6_min">6 min</string>
    <string name="replies">Replies</string>
    <string name="write_a_reply">Write a reply</string>
    <string name="add_friend">Add Friend</string>
    <string name="people_who_reacted">ِPeople who reacted</string>
    <string name="friends">Friends</string>
    <string name="cancel">Cancel</string>

    <string name="info_app">This application is specialized in the field of medicine, you can what you suffer from by communicating with a chat bot, as you can then with doctors so that he can guide you, whether by communicating with him through the application or in his private place, and you can also know if you suffer from chest problems , blood vessels Brain, skin cancer, heart problems, or corneal problems through X-rays displayed on the application ,Also, you can know the rate of oxygen, temperature and heart rate of a person close to you who is far from you through a dedicated part in the application, You can also publish your health problems, find out if someone else suffers from it or not, and have a conversation with the users of the application to discuss health matters.</string>
    <string name="chatbot">Communicate with a chatbot to find out what you are complaining about</string>
    <string name="doctors">Communicate with its doctors from the salvation of the application and know its own location</string>
    <string name="rays">Knowing if you suffer from chest diseases, brain damage, skin cancer, irregular heartbeat, or corneal problems by viewing a ray to determine</string>
    <string name="hardware">Knowing the temperature, oxygen rate and heart rate of a person close to you</string>
    <string name="posts">Posting health problems with program users to find out if one of them suffers from it or not</string>
    <string name="chats">Chatting with users to discuss their health issues</string>
    <string name="alarms">Alarm for personal treatment appointment</string>
    <string name="title_activity_main">MainActivity</string>


</resources>