<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.alarm.AlarmCancelActivity"


        android:background="@drawable/alarm_notify">


        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/it_s_time"
            android:textSize="28sp"
            android:textColor="#DDCCDD"
            android:gravity="center"
            android:layout_marginTop="@dimen/_40sdp" />

        <TextView
            android:id="@+id/reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/time"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/personal_reminder"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reminder"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/_7_21_pm_oct_19"
            android:textSize="28sp"
            android:textColor="#DDCCDD"
            android:gravity="center"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="150dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_done_shape" />

        <Button
            android:id="@+id/btn_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/btn_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:text="@string/view"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_cancel_shape" />

        <Button
            android:id="@+id/btn_Snooze"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/btn_done"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/snooze"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_cancel_shape" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>