<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.ForgotPassword"
        android:background="@color/white"
        android:orientation="vertical">



        <FrameLayout
            android:id="@+id/frame_for"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            >
            <ImageView
                android:id="@+id/shape_pass_newPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/lock_up"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />
            <ImageView
                android:layout_gravity="top|left"
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/ic_arrow_back"
                android:padding="10dp"
                tools:ignore="ContentDescription" />



        </FrameLayout>



            <LinearLayout
                android:paddingTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/frame_for"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/lay_for"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_forgot_password2"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/baseColor"
                    android:text="@string/txt_enter_your_registered_account_below_to_receive_n_password_for_your_account"
                    android:layout_marginBottom="8dp"
                    android:textSize="15sp"/>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:id="@+id/edit_username_forgetpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="50"
                    app:counterTextColor="@color/appColor"
                    android:hint="@string/et_email_or_phone_number"
                    app:errorEnabled="true"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="5dp"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_forget_pass"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_send"
                    android:textSize="18sp"
                    android:textColor="@color/appColor"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:background="@drawable/btn_background"
                    android:src="@drawable/ic_next" />
            </LinearLayout>

            <ImageView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/shape_pass_down_newPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/lock_down"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>